kubernetes/applications/media/manifests/prowlarr/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      # temporary: prefer to keep off overloaded oug node
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - talos-oug-a0q
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.4.0
          volumeMounts:
            - name: run
              mountPath: /run
            - name: config
              mountPath: /config
          ports:
            - containerPort: 9696
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: run
          emptyDir: {}
        - name: config
          emptyDir: {}
