kubernetes/applications/media/manifests/prowlarr/prowlarr-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prowlarr-service
  namespace: media
spec:
  selector:
    app: prowlarr
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 9696
      targetPort: 9696
